--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.1.*",
         "laravel/socialite": "~2.0",
         "laravelcollective/html": "~5.0",
-        "thujohn/twitter": "~2.0",
+        "thujohn/twitter": "^2.0",
         "sammyk/laravel-facebook-sdk": "~3.0@dev",
         "facebook/php-sdk-v4": "~5.0@dev"
     },
